--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 gevent>=1.0.2,<2.0.0
 gevent-websocket>=0.9.5,<1.0.0
-git+https://github.com/leancloud/python-sdk.git@master#egg=leancloud-sdk
+leancloud-sdk>=1.9.0
 Werkzeug>=0.11.11,<1.0.0
 Flask>=0.10.1,<1.0.0
 Flask-Sockets>=0.1,<1.0
